# project1

./: README.md  Vilnius.txt  main.py  project.py  pyproject.toml  task.txt
temp/: temp.py  temp1.py  temp2.py
